Ticket #14419 (closed defect: fixed)

Opened 11 months ago

Last modified 5 months ago

Dialogs are centered wrong on a dual screen system [wxGTK]

Reported by: lanurmi Owned by:
Priority: normal Milestone: 3.0
Component: wxGTK Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

wxSplashScreen is centered in the center of the whole desktop, not in the center of either screen on a dual screen system. That means the splash screen is basically 50%/50% on both screens when the resolutions are equal.

Attachments

centre.diff download (0.6 KB) - added by lanurmi 11 months ago.

Change History

Changed 11 months ago by vadz

Is this really wxSplashScreen-specific? Looking at the code it just calls the usual Centre() functions so it seems like they are broken... Could you please check how do the centred dialogs in the dialogs sample behave?

Changed 11 months ago by lanurmi

  • summary changed from wxSplashScreen is centered wrong on a dual screen system [wxGTK] to Dialogs are centered wrong on a dual screen system [wxGTK]

Kind-of-yes and no, it seems. The centered dialogs of the dialogs sample are indeed centered wrong, but apparently the window manager (Metacity) moves the dialogs enough to keep them on the left-hand-side screen. But this doesn't happen for a splash screen, perhaps because it doesn't have a titlebar.

In any case, I adjusted the summary.

Changed 11 months ago by vadz

This is bad news, I thought we fixed centring some time ago... What system exactly do you use? Could you please try to trace into wxWidgets code to see what goes wrong inside Centre() (probably display size determination but I'm not sure)?

TIA!

Changed 11 months ago by lanurmi

I am using CentOS 6.2 (32-bit). Its gtk version is gtk2-2.18.9-6.el6, in case that matters.

The problem seems to be that wxDisplay::GetClientArea() (called from wxTopLevelWindowBase::DoCentre()) returns the total width of both physical screens.

I am attaching a one-line patch that fixes the problem for me (for both the splash screen and dialogs). However, if it's GetClientArea that is actually broken, then this patch is only an ugly workaround.

Changed 11 months ago by lanurmi

Changed 11 months ago by vadz

  • milestone set to 3.0

The bug is definitely in GetClientArea(), it must always return a subrectangle of the rectangle returned by GetGeometry().

Looking at the code it seems that we could have the behaviour you observe if _NET_WORKAREA is not supported by the WM as then wxClientDisplayRect() returns the entire combined size of all displays. Could you please confirm that this is what happens in your case?

Changed 11 months ago by lanurmi

Today I debugged what happens in wxClientDisplayRect(). It seems that _NET_WORKAREA is supported, and XGetWindowProperty() gets successfully called. But what it returns though workareas[2] is the total width of both screens.

(Sorry about the delay with my answer.)

Changed 11 months ago by vadz

Sorry, no idea where to go from there. We could just use GTK for this function in wxGTK, I guess...

Changed 5 months ago by vadz

 The spec clearly says that the work area 'SHOULD' be included in the total area so it's clear that the WM is not compliant but it probably doesn't help in practice, so I'll add a hack to ensure that we always use the intersection of the work area returned with the total display rect. At the very least this will help with the WMs that don't support _NET_WORKAREA at all.

Please retest and reopen if it still doesn't work after I commit my changes, TIA!

Changed 5 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73282]) Ensure that client display rectangle is always less than its total area.

Under Unix we could return client display rectangle that was bigger than the
entire display size as it corresponded to the total screen size when
_NET_WORKAREA was not supported or was not correctly implemented by the WM.

Fix this by explicitly intersecting the client rect with the total one.

Closes #14419.

Changed 5 months ago by lanurmi

Tested with the splash sample, and it seems to be working properly now. Thanks!

Note: See TracTickets for help on using tickets.